# overlappogram

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  ECCCO_multiion_inversion.py  LICENSE.md  README.md  compare_spectrally_pure.py  configuration.html  create_spectrally_pure_images.py  development.html  example_config.toml  examples.html  experiment.py.ipynb  genindex.html  help.html  img_norm.toml  index.html  magixs_data_products.py  objects.inv  original_config.toml  overview.html  py-modindex.html  pyproject.toml  requirements.txt  response_normalize.ipynb  run_multiion_inversion.py  search.html  searchindex.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  everything_else.md
.github/workflows/: CI.yml  docs.yml  publish.yml
_sources/: configuration.rst.txt  help.rst.txt  index.rst.txt  overview.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/overlappogram/: index.rst.txt
_sources/autoapi/overlappogram/cli/: index.rst.txt
_sources/autoapi/overlappogram/error/: index.rst.txt
_sources/autoapi/overlappogram/inversion/: index.rst.txt
_sources/autoapi/overlappogram/io/: index.rst.txt
_sources/autoapi/overlappogram/response/: index.rst.txt
_sources/autoapi/overlappogram/spectral/: index.rst.txt
autoapi/: index.html
autoapi/overlappogram/: index.html
autoapi/overlappogram/cli/: index.html
autoapi/overlappogram/error/: index.html
autoapi/overlappogram/inversion/: index.html
autoapi/overlappogram/io/: index.html
autoapi/overlappogram/response/: index.html
autoapi/overlappogram/spectral/: index.html
configs/: full_aia_data.toml  original_config.toml  trimmed_aia_data.toml
configs/old/: full_aia_data.toml  img_norm.toml  precompute.toml  spectra_only.toml  trimmed_full_aia_data.toml  uniform_weights.toml
docs/: conf.py  configuration.rst  development.rst  examples.rst  index.rst  overview.rst
experiment_scripts/: ECCCO_multiion_inversion.py  compare_spectrally_pure.ipynb  compare_spectrally_pure.py  create_spectrally_pure_images.py  inspect_results.ipynb  photons.ipynb  restart_after_convergence_warm.py  run_multiion_inversion_parallel.py  search.py  trim_imager.py
overlappogram/: __init__.py  __main__.py  abstract_model.py  cli.py  create_color_color_plot.py  create_dependence_image.py  create_gnt_image.py  create_poisson_noisy_image.py  create_unique_directory.py  elasticnet_model.py  element.py  em_data_cube.py  error.py  homemade_model.py  image.py  inversion.py  inversion_field_angles.py  inversion_field_angles_logts_ions.py  io.py  reconstruct_inverted_image.py  response.py  ridge_model.py  sgd_model.py  spectral.py  train.py
tests/: test_config.toml  test_gnt.fits  test_inversion.py  test_io.py  test_overlappogram.fits  test_response.fits  test_spectral.py  test_weights.fits
