[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'

[project]
name = "overlappogram"
version = "0.0.1"
dependencies = ["numpy",
    "astropy",
    "scikit-learn",
    "pandas",
    "pillow",
    "matplotlib",
    "photutils",
    "scipy",
    "ndcube"
]
requires-python = ">=3.9"
authors = [
  {name = "Dyana Beabout", email = "dyana.l.beabout@nasa.gov"},
  {name = "J. Marcus Hughes", email = "hughes.jmb@gmail.com"}
]
maintainers = [
  {name = "J. Marcus Hughes", email = "hughes.jmb@gmail.com"}
]
description = "Overlappogram unfolding and analysis software"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["overlappogram", "solar", "physics", "analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = ["pytest", "pytest-doctestplus", "pytest-cov"]
docs = ["sphinx", "sphinx-automodapi"]
all = []

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/jmbhughes/overlappogram.git"
"Bug Tracker" = "https://github.com/jmbhughes/overlappogram/issues"
Changelog = "https://github.com/jmbhughes/overlappogram/blob/main/CHANGELOG.md"

[tool.codespell]
skip = "*.fts,*.fits,venv,*.pro,*.asdf"

[tool.ruff]
target-version = "py39"
line-length = 120
exclude=[
    ".git,",
    "__pycache__",
    "build",
    "overlappogram/version.py",
]
show-fixes = true
show-source = true

select = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
]

extend-ignore = [ ]

[tool.ruff.per-file-ignores]
# Part of configuration, not a package.
"setup.py" = ["INP001"]
"conftest.py" = ["INP001"]
# implicit-namespace-package. The examples are not a package.
"docs/*.py" = ["INP001"]
# Module level imports do not need to be at the top of a file here
"docs/conf.py" = ["E402"]

"__init__.py" = ["E402", "F401", "F403"]
"test_*.py" = ["B011", "D", "E402", "PGH001", "S101"]


[tool.ruff.pydocstyle]
convention = "numpy"
